QuestionGame v0.1 + db fixes
